# dotstar_zephyr_app

./: CMakeLists.txt  Kconfig  README.md  prj.conf
boards/: rpi_pico.overlay
src/: main.c
